--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="sampaikan">Sampaikan Laporan Anda Langsung Kepada \\n \nInstansi Pemerintah Kabupaten Hulu Sungai \nTengah</string>
+    <string name="sampaikan">Sampaikan Laporan Anda Langsung Kepada \\n \nInstansi Pemerintah Kabupaten Hulu Sungai Tengah</string>
 </resources>
