--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
       and landed jobs at tech giants. Our vision is to build a gigantic network of
       geeks and we are only a fraction of it yet.
   </string>
-  <string name="sampaikan">Sampaikan Laporan Anda Langsung Kepada Instansi Pemerintah Kabupaten Hulu Sungai \nTengah</string>
+  <string name="sampaikan">Sampaikan Laporan Anda Langsung Kepada Instansi Pemerintah Kabupaten Hulu Sungai Tengah</string>
   <string name="lapor">PROSES</string>
   <string name="judul_pengaduan">Judul Pengaduan</string>
   <string name="isi_pengaduan">Isi Pengaduan</string>
@@ -28,4 +28,5 @@
     <string name="dinas">Dinas Pekerjaan Umum dan Penataan Ruang\nKabupaten Hulu Sungai Tengah</string>
   <string name="nama_pelapor">Nama Pelapor</string>
   <string name="hp_pelapor">HP PELAPOR</string>
+  <string name="penjelasan_token">Silakan masukkan token untuk melihat\nproses tindak lanjut laporan Anda.</string>
 </resources>
